@@ -7,44 +7,44 @@ Icon=extension.png
 Exec=/opt/openoffice/program/soffice slot:5500
 Categories=Application;Office;X-Red-Hat-Base;X-SuSE-Core-Office;
 Type=Application
-Name=OpenOffice.org 2.4 From Template
-Name[en]=OpenOffice.org 2.4 From Template
-Name[de]=OpenOffice.org 2.4 Aus Vorlage
-Name[pt]=OpenOffice.org 2.4 Aus Vorlage
-Name[ru]=OpenOffice.org 2.4 из шаблона...
-Name[el]=OpenOffice.org 2.4 Από πρότυπο
-Name[nl]=OpenOffice.org 2.4 Uit sjabloon
-Name[fr]=À partir d'un modèle OpenOffice.org 2.4
-Name[es]=A partir de una plantilla de OpenOffice.org 2.4
-Name[fi]=OpenOffice.org 2.4 Aus Vorlage
-Name[hu]=OpenOffice.org 2.4 sablonból
-Name[it]=OpenOffice.org 2.4 Da modello
-Name[cs]=Ze šablony OpenOffice.org 2.4
-Name[sk]=Zo šablóny OpenOffice.org 2.4
-Name[da]=OpenOffice.org 2.4 Fra skabelon
-Name[sv]=Från en OpenOffice.org 2.4-mall
-Name[pl]=OpenOffice.org 2.4 Na podstawie szablonu
-Name[pt_BR]=A partir de um modelo OpenOffice.org 2.4
-Name[ja]=OpenOffice.org 2.4 テンプレートから
-Name[ko]=OpenOffice.org 2.4 서식 파일로부터
-Name[zh_CN]=OpenOffice.org 2.4 采用样式
-Name[zh_TW]=OpenOffice.org 2.4 採用樣式
-Name[tr]=OpenOffice.org 2.4 Şablondan
-Name[ar]=OpenOffice.org 2.4 Aus Vorlage
-Name[he]=OpenOffice.org 2.4 Aus Vorlage
-Name[ca]=OpenOffice.org 2.4 Aus Vorlage
-Name[th]=OpenOffice.org 2.4 จากแม่แบบ
-Name[hi_IN]=OpenOffice.org 2.4 Aus Vorlage
-Name[et]=OpenOffice.org 2.4 mallist
-Name[sl]=OpenOffice.org 2.4 iz predloge
-Name[ns]=OpenOffice.org 2.4 go tšwa go Template
-Name[af]=OpenOffice.org 2.4 vanaf sjabloon
-Name[zu]=I-OpenOffice.org 2.4 esuka Oqwenjini lokuphumelelisa
-Name[nb]=OpenOffice.org 2.4 From Template
-Name[cy]=OpenOffice.org 2.4 From Template
-Name[tn]=OpenOffice.org 2.4 From Template
-Name[nn]=OpenOffice.org 2.4 From Template
-Name[eu]=OpenOffice.org 2.4 Aus Vorlage
-Name[lt]=„OpenOffice.org 2.4“ dokumentas iš šablono
-Name[kn_IN]=OpenOffice.org 2.4 ಸಿದ್ಧವಿನ್ಯಾಸ ಪುಟದಿಂದ
-Name[gl]=A partir dun modelo de OpenOffice.org 2.4
+Name=OpenOffice.org devel From Template
+Name[en]=OpenOffice.org devel From Template
+Name[de]=OpenOffice.org devel Aus Vorlage
+Name[pt]=OpenOffice.org devel Aus Vorlage
+Name[ru]=OpenOffice.org devel из шаблона...
+Name[el]=OpenOffice.org devel Από πρότυπο
+Name[nl]=OpenOffice.org devel Uit sjabloon
+Name[fr]=À partir d'un modèle OpenOffice.org devel
+Name[es]=A partir de una plantilla de OpenOffice.org devel
+Name[fi]=OpenOffice.org devel Aus Vorlage
+Name[hu]=OpenOffice.org devel sablonból
+Name[it]=OpenOffice.org devel Da modello
+Name[cs]=Ze šablony OpenOffice.org devel
+Name[sk]=Zo šablóny OpenOffice.org devel
+Name[da]=OpenOffice.org devel Fra skabelon
+Name[sv]=Från en OpenOffice.org devel-mall
+Name[pl]=OpenOffice.org devel Na podstawie szablonu
+Name[pt_BR]=A partir de um modelo OpenOffice.org devel
+Name[ja]=OpenOffice.org devel テンプレートから
+Name[ko]=OpenOffice.org devel 서식 파일로부터
+Name[zh_CN]=OpenOffice.org devel 采用样式
+Name[zh_TW]=OpenOffice.org devel 採用樣式
+Name[tr]=OpenOffice.org devel Şablondan
+Name[ar]=OpenOffice.org devel Aus Vorlage
+Name[he]=OpenOffice.org devel Aus Vorlage
+Name[ca]=OpenOffice.org devel Aus Vorlage
+Name[th]=OpenOffice.org devel จากแม่แบบ
+Name[hi_IN]=OpenOffice.org devel Aus Vorlage
+Name[et]=OpenOffice.org devel mallist
+Name[sl]=OpenOffice.org devel iz predloge
+Name[ns]=OpenOffice.org devel go tšwa go Template
+Name[af]=OpenOffice.org devel vanaf sjabloon
+Name[zu]=I-OpenOffice.org devel esuka Oqwenjini lokuphumelelisa
+Name[nb]=OpenOffice.org devel From Template
+Name[cy]=OpenOffice.org devel From Template
+Name[tn]=OpenOffice.org devel From Template
+Name[nn]=OpenOffice.org devel From Template
+Name[eu]=OpenOffice.org devel Aus Vorlage
+Name[lt]=„OpenOffice.org devel“ dokumentas iš šablono
+Name[kn_IN]=OpenOffice.org devel ಸಿದ್ಧವಿನ್ಯಾಸ ಪುಟದಿಂದ
+Name[gl]=A partir dun modelo de OpenOffice.org devel
